--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,12 @@ a{
     font-weight: bold;
     margin: 2px;
 }
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1F2937;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
